# OSN-GS

./: .gitignore  AGENTS.md  Agent.md  Migration.md  OSN_GS_Final_Boundary_First_NURBS_Direction.md  OSN_GS_Phase4_Hardening_Plan.md  OSN_GS_Phase5_Boundary_Aligned_Extension_Plan.md  OSN_GS_Voxel_Driven_NURBS_Migration_Plan.md  README.md  RENDERER_INPUT_FORMAT.md  TODO.md  colab_train_3dgs.ipynb  pyproject.toml  requirements.txt  train.py  train_with_ws_runtime.py
artifacts/: gaussian_support_continuity_stage3r_signals.csv  gaussian_support_continuity_stage3r_summary.json  proxy_decomposition_baseline.json  proxy_decomposition_stage1.json  proxy_decomposition_stage2.json
configs/: osn_gs.yaml
docker/: .dockerignore  Dockerfile  README.md  compose.yml
docs/: README.md  RENDERER_INPUT_FORMAT.md  architecture.md  devtools.md  low-vram-training.md  nurbs_construction.md  voxel_role.md
nurbs_constructor_benchmark/: README.md  __init__.py  __main__.py  benchmark_common.py  boundary_bias_analysis.py  boundary_first.py  component_report.py  diagnostics.py  ground_truth.py  metrics.py  runner.py  scenes.py  support_domains.py
osn_gs/: __init__.py  cli.py
scripts/: build_baseline_extensions.bat  stage1_ablation.py  start_trainer_stream.ps1  start_trainer_stream.sh  train_osn_gs.py  train_osn_gs_torch.py
tests/: test_annulus_chart.py  test_boundary_bias_analysis.py  test_boundary_reconciliation.py  test_candidate_evidence.py  test_colmap_scene_vendor.py  test_component_boundary.py  test_continuation_domain.py  test_framework_smoke.py  test_gaussian_support_continuity.py  (+17 more)
(+281 files in other folders)
