[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "osn-gs"
version = "0.1.0"
description = "OSN-GS training and NURBS construction tools"
requires-python = ">=3.10"

[project.scripts]
osn-gs = "osn_gs.cli:main"

[tool.setuptools.packages.find]
include = ["osn_gs*", "nurbs_constructor_benchmark*"]
